package com.example.reservations.model;

public enum ReservationAccess {
    PUBLIC,
    PRIVATE
}
